Segui con mas CSS

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css\st.css">
     <title>Document</title>
+
 </head>
 <body>
-    
+    <header>
+        <figure>
+            <img src="imagenes/logoS.jpg" alt="Logo de Samuel" width="200px">
+            <h1>Samuel Flores Velázquez </h1>
+            <h6>Programador de Microondas</h6>
+        </figure>
+        <img src="imagenes/total.jpg" alt="Logo de Samuel" width="1000px">
+        
+    </header>
+
 </body>
 </html>
