--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
             <h1>Samuel Flores Velázquez </h1>
             <h6>Programador de Microondas</h6>
         </figure>
-        <img src="imagenes/total.jpg" alt="Logo de Samuel" width="1000px">
-        
+        <img src="imagenes/total.jpg" alt="Logo de Samuel" width="500px">
+        <h2>featured Work</h2>
+        <div>
+            <img src="imagenes/cssimagen.jpg" alt="css" >
+            <img src="imagenes/htmlimagen.png" alt="html" width="200 px">
+        </div>
     </header>
 
 </body>
